07/20/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Xerces needs to be installed in the java endorsed directory now to make
      use of DOM3 classes.

06/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * XMLAttribute was added to the new data model.
    * Added support for editing attributes to the XMLElement class.
    * Created an new XMLDocument class.
    * Made use of the DOM events model to allow users to register DOM event
      listeners.
    * Added a new XMLDocumentType class
    * Added factory methods for XMLElements and XMLAttributes to the
      XMLDocument class.

06/04/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * XMLElement was added to model element nodes

06/03/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the XMLException class for use in handling XML errors
    * Updated the XMLNode class to support a simple interface for Node editing.

06/01/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added insertUpdate and removeUpdate methods to the XMLDocumentListener
    * Updated XMLDocument to notify listeners on insert and remove events.

05/24/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the minimum version of xerces needed to run jsXe to 2.8.
      Previously jsXe had been checking for 2.7
    * Added a status bar to jsXe. This can be used in the future to show info
      and messages to the user and can be used by plugins.
    * Added properties for setting the fonts used in jsXe's appearance.

04/18/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Made some GUI tweaks to the splash screen.
    * Made some tweaks to how the serializer formats XML Documents
    * Fixed bug 1467968: Splitting CDATA tags doesn't work

04/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated support for different encodings. Now jsXe will support all
      encodings that the JVM being used supports. jsXe now opens documents
      properly by examining the files for UTF file markers or the encoding